<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:weightSum="3"
    android:id="@+id/item_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/date_to"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/to"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/patient_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/date_from"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/from"
        android:textSize="18sp"
        android:background="@drawable/patient_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/date_day"
        android:text="@string/day"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="4dp"
        android:background="@drawable/patient_background"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</LinearLayout>