<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="doctor.task.dentist.view.features.doctor.registeration.fragments.DoctorLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:elevation="10sp"
            android:layout_height="400dp">

            <include layout="@layout/loading"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/doctor_login_number_tv"
        android:text="@string/number"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/doctor_login_number_et"
        android:background="@drawable/placeholder_background"
        app:layout_constraintTop_toBottomOf="@id/doctor_login_number_tv"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/doctor_login_password_tv"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_login_number_et"
        app:layout_constraintEnd_toEndOf="@id/doctor_login_number_et"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/doctor_login_password_et"
        android:background="@drawable/placeholder_background"
        app:layout_constraintTop_toBottomOf="@id/doctor_login_password_tv"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/doctor_login_btn"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/doctor_login_password_et"
        android:layout_marginTop="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/doctor_login_create_account"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/doctor_login_btn"
        app:layout_constraintStart_toStartOf="@id/doctor_login_btn"
        app:layout_constraintEnd_toEndOf="@id/doctor_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/signup"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dont_have_account"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
