<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="doctor.task.dentist.view.features.doctor.registeration.fragments.DoctorSignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/doctor_signup_fullname_tv"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/doctor_signup_fullname_et"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_fullname_tv"
            android:background="@drawable/placeholder_background"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/doctor_signup_number_tv"
            android:text="@string/number"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_fullname_et"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_fullname_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/doctor_sinup_nnumber_et"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_number_tv"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/placeholder_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/doctor_signup_password_tv"
            android:text="@string/password"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_sinup_nnumber_et"
            app:layout_constraintEnd_toEndOf="@id/doctor_sinup_nnumber_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/doctor_signup_password_et"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:background="@drawable/placeholder_background"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_password_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/doctor_signup_doctor_number_tv"
            android:text="@string/doctor_number"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_password_et"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/doctor_signup_doctor_number_et"
            android:inputType="number"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/placeholder_background"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_doctor_number_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/doctor_signup_price_tv"
            android:text="@string/price"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_doctor_number_et"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_doctor_number_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/doctor_signup_price_et"
            android:background="@drawable/placeholder_background"
            android:layout_marginTop="8dp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_price_tv"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_price_tv"
            app:layout_constraintStart_toStartOf="@id/doctor_signup_price_tv"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/doctor_signup_img_tv"
            android:text="@string/picture"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_price_et"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_price_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/doctor_signup_img_layout"
            android:layout_marginTop="8dp"
            android:background="@drawable/placeholder_background"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_img_tv"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_img_tv"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/doctor_signup_img"
                android:src="@drawable/add"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/doctor_signup_specialty_tv"
            android:text="@string/speciality"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_img_layout"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_img_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doctor_signup_specialty_recyclerview"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_specialty_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/doctor_signup_clinic_tv"
            android:text="@string/clinic"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_specialty_recyclerview"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_specialty_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doctor_signup_clinic_recyclerview"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_clinic_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/doctor_signup_appointments_tv"
            android:text="@string/doctor_appointments"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_clinic_recyclerview"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_clinic_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doctor_signup_appointments_recyclerview"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_appointments_tv"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/doctor_signup_day_tv"
            android:text="@string/day"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_appointments_recyclerview"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_appointments_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/doctor_signup_day_spinner_layout"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_day_tv"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_day_tv"
            android:layout_marginTop="8dp"
            android:background="@drawable/placeholder_background"
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <Spinner
                android:id="@+id/doctor_signup_day_spinner"
                android:entries="@array/days"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:text="@string/from"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/doctor_signup_appointments_from"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_appointments_from"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/doctor_signup_appointments_from"
            android:text="12:00 PM"
            app:layout_constraintTop_toTopOf="@id/doctor_signup_day_spinner_layout"
            app:layout_constraintBottom_toBottomOf="@id/doctor_signup_day_spinner_layout"
            app:layout_constraintEnd_toStartOf="@id/doctor_signup_day_spinner_layout"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/placeholder_background"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <TextView
            android:text="@string/to"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/doctor_signup_appointments_to"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_appointments_to"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/doctor_signup_appointments_to"
            android:text="12:00 PM"
            app:layout_constraintTop_toTopOf="@id/doctor_signup_appointments_from"
            app:layout_constraintBottom_toBottomOf="@id/doctor_signup_appointments_from"
            app:layout_constraintEnd_toStartOf="@id/doctor_signup_appointments_from"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/placeholder_background"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/doctor_signup_add_appointment_layout"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_day_spinner_layout"
            app:layout_constraintEnd_toEndOf="@id/doctor_signup_day_spinner_layout"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:elevation="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/doctor_signup_add_appointment_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/add_appointment"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/add"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/doctor_signup_add_appointment_tv"
                android:background="@drawable/add_appointment_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/doctor_signup_btn"
            android:background="@drawable/button_background"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_add_appointment_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/doctor_signup_login_layout"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/already_have_account_tv"
                android:text="@string/already_have_account"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
