<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="doctor.task.dentist.view.features.doctor.ReservationListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/reservation_list"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@drawable/header_gradient"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <ImageView
            android:id="@+id/logout"
            app:layout_constraintTop_toTopOf="@id/header_layout"
            app:layout_constraintBottom_toBottomOf="@id/header_layout"
            app:layout_constraintStart_toStartOf="@id/header_layout"
            android:src="@drawable/logout"
            android:padding="15dp"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <LinearLayout
            android:id="@+id/data_layout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="1dp"
            android:background="@drawable/reservation_layout_background"
            app:layout_constraintTop_toBottomOf="@id/header_layout"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:text="@string/hour"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/hour_background"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/day"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/day_background"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@drawable/name_background"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/patients_recyclerview"
            android:background="@drawable/patient_background"
            app:layout_constraintTop_toBottomOf="@id/data_layout"
            app:layout_constraintStart_toStartOf="@id/data_layout"
            app:layout_constraintEnd_toEndOf="@id/data_layout"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
