<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/day_tv"
        android:text="@string/day"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/appointment_day"
        android:text="السبت"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@id/day_tv"
        app:layout_constraintBottom_toBottomOf="@id/day_tv"
        app:layout_constraintEnd_toStartOf="@id/day_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/from_tv"
        android:text="@string/from"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@id/day_tv"
        app:layout_constraintBottom_toBottomOf="@id/day_tv"
        app:layout_constraintEnd_toStartOf="@id/appointment_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/appointment_from"
        android:text="12:00 PM"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/from_tv"
        app:layout_constraintTop_toTopOf="@id/from_tv"
        app:layout_constraintBottom_toBottomOf="@id/from_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/to_tv"
        android:text="@string/to"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/appointment_from"
        app:layout_constraintTop_toTopOf="@id/from_tv"
        app:layout_constraintBottom_toBottomOf="@id/from_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/appointment_to"
        android:text="12:00 PM"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@id/to_tv"
        app:layout_constraintTop_toTopOf="@id/to_tv"
        app:layout_constraintBottom_toBottomOf="@id/to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>